--- a/configs/sac_default.yaml
+++ b/configs/sac_default.yaml
@@ -13,6 +13,7 @@ one:
     target_update_interval: '1'
     tau: '0.1'
     train_freq: 10
+    total_timesteps: 30000
 two:
     batch_size: '1024'
     buffer_size: 1000000
